--- a/templates/pizzeria/menu.html.twig
+++ b/templates/pizzeria/menu.html.twig
@@ -2,6 +2,24 @@
 
 {% block body %}
 
+    <div class="panel_menu">
+        {% for pizza in pizza_list %}
+        <div class="element">
+            <div class="photo">
+            </div>
+            <div class="title_name">
+                <h3>{{ pizza.name }}</h3>
+            </div>
+            <div class="description">
+                <p>{{ pizza.description }}</p>
+            </div>
+            <div class="pull-up">
+                <input type="button" name="pizza_element" class="btn-pull" id="" value="" />
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
 {% endblock %}
 {% block javascripts %}{% endblock %}
 {% block stylesheets %}{% endblock %}
